3.0.0-alpha13 - fix overlapping panels

--- a/npm-package/src/editor/LxEditPanelStyles.scss
+++ b/npm-package/src/editor/LxEditPanelStyles.scss
@@ -37,6 +37,7 @@
     height: calc(100vh - 16px);
     top: 8px;
     right: 8px;
+    left: unset;
   }
 
   &.docked-bottom {
